<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="280dp"
                android:padding="8dp"
                android:background="#ffffff"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="15sp"
                    android:background="#ffffff"
                    android:inputType="textPersonName"
                    android:text=""
                    android:hint="@string/sqlite_hint1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="280dp"
                android:padding="8dp"
                android:background="#ffffff"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="15sp"
                    android:background="#ffffff"
                    android:inputType="textPersonName"
                    android:text=""
                    android:hint="@string/sqlite_hint2"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="280dp"
                android:padding="8dp"
                android:background="#ffffff"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:background="#ffffff"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="15sp"
                    android:inputType="textPersonName"
                    android:text=""
                    android:hint="@string/sqlite_hint3"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="280dp"
                android:padding="8dp"
                android:background="#ffffff"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="match_parent"
                    android:background="#ffffff"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="15sp"
                    android:inputType="textPersonName"
                    android:text=""
                    android:hint="@string/sqlite_hint4"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_gravity="center_horizontal"
                android:layout_width="280dp"
                android:layout_height="wrap_content">

                <Button
                    android:textColor="#2d944f"
                    android:id="@+id/btn_nuevo"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/sqlite_btnNuevo"/>

                <Button
                    android:textColor="#349ce6"
                    android:id="@+id/btn_busqueda"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/sqlite_btnBusqueda"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_gravity="center_horizontal"
                android:layout_width="280dp"
                android:layout_height="wrap_content">

                <Button
                    android:textColor="#349ce6"
                    android:textStyle="bold"
                    android:id="@+id/btn_modificar"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/sqlite_btnModificar"/>

                <Button
                    android:textColor="#e63a34"
                    android:textStyle="bold"
                    android:id="@+id/btn_eliminar"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/sqlite_btnEliminar"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="280dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_gravity="center_vertical"
                    android:id="@+id/imb_prev"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/icono1"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/imb_first"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginBottom="5dp"
                        app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp"
                        tools:ignore="VectorDrawableCompat"
                        android:contentDescription="@string/icono1" />

                    <ImageButton
                        android:id="@+id/imb_last"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp"
                        tools:ignore="VectorDrawableCompat"
                        android:contentDescription="@string/icono1" />

                </LinearLayout>

                <ImageButton
                    android:layout_gravity="center_vertical"
                    android:id="@+id/imb_next"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/icono1" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_limpiar"
                android:textColor="#349ce6"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_btnLimpiar"/>
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>